# json-parser-flat-format

./: .gitignore  Cargo.toml  README.md
examples/: payload.json  profiling.rs  testing.rs
src/: lexer.rs  lib.rs  parser.rs  serializer.rs
