[package]
name = "json-flat-parser"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = 1

[dependencies]
simdutf8 = { version = "0.1.4", optional = true }
indexmap = { version = "2.2.6", optional = true }
serde = { version = "1.0.204", optional = true, default-features = false }
serde_json = {version = "1.0.120" , optional = true, features = ["raw_value"]}
[features]
simdutf8 = ["dep:simdutf8"]
indexmap = ["dep:indexmap"]
serde = ["dep:serde", "dep:serde_json"]
